--- a/_config.yml
+++ b/_config.yml
@@ -95,4 +95,7 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: ''
+- type: git
+  # 下方的GH_TOKEN会被.travis.yml中sed命令替换
+  repo: https://GH_TOKEN@github.com:foreverfly/foreverfly.github.io.git
+  branch: master
