--- a/_config.yml
+++ b/_config.yml
@@ -97,5 +97,5 @@ theme: landscape
 deploy:
 - type: git
   # 下方的GH_TOKEN会被.travis.yml中sed命令替换
-  repo: https://GH_TOKEN@github.com:foreverfly/foreverfly.github.io.git
+  repo: https://GH_TOKEN@github.com/foreverfly/foreverfly.github.io.git
   branch: master
