Commit at 2019-11-20 HH:24:43

--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,6 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-- type: git
-  # 下方的GH_TOKEN会被.travis.yml中sed命令替换
+  type: git
   repo: https://GH_TOKEN@github.com/foreverfly/foreverfly.github.io.git
   branch: master
