--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: huhu
+theme: Butterfly
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
